--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="container">
 			<div class="header__inner" id="header__inner">
 				<div class="header__logo" id="header__logo">
-					<a href="/">
+					<a href="index.html">
 						<img class="header__logo-img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
 					</a>
 				</div>
@@ -72,7 +72,9 @@
 			<div class="burger__menu" id="burger__menu">
 				<div class="burger__content">
 					<div class="burger__logo">
-						<img class="burger__logo-img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
+						<a href="index.html">
+							<img class="burger__logo-img" src="img/DariaFrontEnd.png" alt="логотип DariaFrontEnd">
+						</a>
 					</div>
 					<nav class="burger__nav">
 						<ul class="burger__nav-list">
@@ -84,7 +86,8 @@
 					</nav>
 					<ul class="social social__burger">
 						<li class="social__item social__burger-item">
-							<a class="social__item-link social__burger-link" href="https://www.instagram.com/dariazhel28" target="_blank">
+							<a class="social__item-link social__burger-link" href="https://www.instagram.com/dariazhel28"
+								target="_blank">
 								<svg class="social__icon social__burger-icon">
 									<use xlink:href="#instagram"></use>
 								</svg>
@@ -184,34 +187,40 @@
 		<section class="section" id="skills">
 			<div class="container">
 				<h2 class="section__title section__skills-title">Мои компетенции</h2>
-				<div class="skills skills__html">
-					<h3 class="skills__title">HTML и CSS</h3>
-					<p class="skills__description">это основа фронтенд разработки. Умение создавать и правильно структурировать
-						HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого
-						фронтенд разработчика.</p>
-				</div>
+				<ul class="skills__list">
+					<li class="skills skills__html">
+						<h3 class="skills__title">HTML и CSS</h3>
+						<p class="skills__description">это основа фронтенд разработки. Умение создавать и правильно структурировать
+							HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для
+							каждого
+							фронтенд разработчика.</p>
+					</li>
 
-				<div class="skills skills__js">
-					<h3 class="skills__title">JavaScript</h3>
-					<p class="skills__description">это язык программирования, который используется для создания динамического и
-						интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами
-						JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.
-					</p>
-				</div>
+					<li class="skills skills__js">
+						<h3 class="skills__title">JavaScript</h3>
+						<p class="skills__description">это язык программирования, который используется для создания динамического и
+							интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами
+							JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне
+							клиента.
+						</p>
+					</li>
 
-				<div class="skills skills__library">
-					<h3 class="skills__title">Работа с библиотеками и фреймворками</h3>
-					<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
-						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
-						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
-				</div>
+					<li class="skills skills__library">
+						<h3 class="skills__title">Работа с библиотеками и фреймворками</h3>
+						<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+							фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать
+							их
+							под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+					</li>
 
-				<div class="skills skills__adaptive">
-					<h3 class="skills__title">Разработка для мобильных устройств и адаптивная верстка</h3>
-					<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
-						фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их
-						под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
-				</div>
+					<li class="skills skills__adaptive">
+						<h3 class="skills__title">Разработка для мобильных устройств и адаптивная верстка</h3>
+						<p class="skills__description">фронтенд разработчики должны быть знакомы с различными библиотеками и
+							фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать
+							их
+							под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+					</li>
+				</ul>
 			</div>
 		</section>
 
